--- a/_1_ML_basics.ipynb
+++ b/_1_ML_basics.ipynb
@@ -6668,13 +6668,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -6701,16 +6694,87 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean_absolute_error\n",
+      "0.8\n",
+      "root_mean_squared_error\n",
+      "0.8944271909999159\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1, 2, 3, 4, 5]\n",
+    "b = [1, 3, 4, 5, 6]\n",
+    "\n",
+    "from sklearn.metrics import (\n",
+    "    mean_absolute_error as mae,\n",
+    "    root_mean_squared_error as rmse\n",
+    ")\n",
+    "\n",
+    "for i in (\n",
+    "    mae,\n",
+    "    rmse\n",
+    "):\n",
+    "    print(i.__name__)\n",
+    "    print(i(a, b))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean_absolute_error\n",
+      "9.6\n",
+      "root_mean_squared_error\n",
+      "20.139513400278567\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now let's introduce an outlier and see how the error grows in different metrics\n",
+    "a = [1, 2, 3, 4, 5]\n",
+    "b = [1, 3, 4, 5, 50]\n",
+    "\n",
+    "from sklearn.metrics import (\n",
+    "    mean_absolute_error as mae,\n",
+    "    root_mean_squared_error as rmse\n",
+    ")\n",
+    "\n",
+    "for i in (\n",
+    "    mae,\n",
+    "    rmse\n",
+    "):\n",
+    "    print(i.__name__)\n",
+    "    print(i(a, b))\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Absolute error\n",
+    "### ❌ Absolute error\n",
     "\n",
     "Sum of the absolute values of the distances between data point and the line.\n",
     "\n",
     "$$\n",
     "AE = \\sum_{i=1}^{n} | y_{i} - \\hat{y_{i}} | \n",
-    "$$"
+    "$$\n",
+    "\n",
+    "❌ **Disadvantages**:\n",
+    "- Depends entirely on the number of data points;\n",
+    "- DON'T USE THIS METRIC"
    ]
   },
   {
@@ -6731,6 +6795,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "🔎 **Features**\n",
+    "- Range of value: $[0, +\\infty)$\n",
+    "- Ideal value: $0$\n",
+    "\n",
     "✅ **Advantages**:\n",
     "- Less sensitive to outliers, so use in data with tons of outliers. \n",
     "- Intuitive to understand;\n",
@@ -6760,7 +6828,16 @@
     "\n",
     "Mean of the squared differences between the predicted and actual values.\n",
     "\n",
-    "$$ MSE = \\frac{1}{N} \\sum_{i=1}^{N} (y_{i} - \\hat{y})^{2} $$\n",
+    "$$ MSE = \\frac{1}{N} \\sum_{i=1}^{N} (y_{i} - \\hat{y})^{2} $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔎 **Features**\n",
+    "- Range of value: $[0, +\\infty)$\n",
+    "- Ideal value: $0$\n",
     "\n",
     "✅ **Advantages**:\n",
     "- Punishes you for having larger errors, so is very sensitive to outliers;\n",
@@ -6780,7 +6857,16 @@
     "\n",
     "Root of the mean square error; error around the regression line. Estimates the SD of y-values vertically; typical amount of errors of a model. $\\hat{y}_{i}$ - predicted value; $y_{i}$ - actual value. The advantage of RMSE is that it has the same units as the prediction. $y = mx + b \\pm RMSE$. Corresponds to the Euclidean norm (Euclidean distance - length of the straight-line distance between two points) | RMSE is more sensitive to outliers, so preferred when outliers are exponentially rare in the data (e.g. bell-shaped curve).\n",
     "\n",
-    "$$ RMSE = \\sqrt{ \\frac{1}{n} \\sum_{i=1}^{n}(y_{i} - \\hat{y_{i}})^{2} } = \\sqrt{ \\frac{ \\sum\\limits_{i=1}^{n}(y_{i} - \\hat{y_{i}})^{2} }{ n } } $$\n",
+    "$$ RMSE = \\sqrt{ \\frac{1}{n} \\sum_{i=1}^{n}(y_{i} - \\hat{y_{i}})^{2} } = \\sqrt{ \\frac{ \\sum\\limits_{i=1}^{n}(y_{i} - \\hat{y_{i}})^{2} }{ n } } $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔎 **Features**\n",
+    "- Range of value: $[0, +\\infty)$\n",
+    "- Ideal value: $0$\n",
     "\n",
     "✅ Advantages:\n",
     "- Punishes you for having larger errors, e.g. outliers (but less than MSE)\n",
@@ -6802,7 +6888,10 @@
     "\n",
     "The same as the root mean squared error, but adjusted for degrees of freedom. It's like RMSE but denominator is the degrees of freedom.\n",
     "\n",
-    "$$ RSE = \\sqrt{ \\frac{ \\sum_{i=1}^{n}(y_{i} - \\hat{y_{i}})^{2} }{ (n-p-1) } } $$ \n",
+    "$$\n",
+    "RSE = \\sqrt{ \\frac{ \\sum_{i=1}^{n}(y_{i} - \\hat{y_{i}})^{2} }{ (n-p-1) } }\n",
+    "$$ \n",
+    "\n",
     ", where $p$ - number of predictors\n"
    ]
   },
@@ -6810,7 +6899,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### R-squared"
+    "### R-squared\n",
+    "\n",
+    "> Coefficient of determination, $R^2$\n",
+    "\n",
+    "$$\n",
+    "R^2 = 1 - \\cfrac{\n",
+    "    \\cfrac{1}{n} \\sum\\limits_{i}^{n} (y_i - \\hat{y_i})^2\n",
+    "}{\n",
+    "    \\sum\\limits_{i}^{n} (y_i - \\overline{y_i})^2\n",
+    "}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "🔎 **Features**\n",
+    "- Range of value: $( - \\infty, 1]$\n",
+    "- Ideal value: $1$\n",
+    "\n"
    ]
   },
   {
@@ -9302,7 +9411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "data-science-ml-cpu",
+   "display_name": "handbook-data-science-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -9316,7 +9425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.9"
+   "version": "3.12.10"
   },
   "orig_nbformat": 4
  },
