--- a/_1_ML_basics.ipynb
+++ b/_1_ML_basics.ipynb
@@ -9411,7 +9411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "handbook-data-science-py3.12",
+   "display_name": "data-science-ml-cpu",
    "language": "python",
    "name": "python3"
   },
@@ -9425,7 +9425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.13.9"
   },
   "orig_nbformat": 4
  },
