--- a/_Numpy.ipynb
+++ b/_Numpy.ipynb
@@ -1649,6 +1649,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### np.partition"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original list: [ 10  50 200 150 200  10  30  30  20]\n",
+      "Sorted list:   [10, 10, 20, 30, 30, 50, 150, 200, 200]\n",
+      "\n",
+      "Get 1 largest elemements fast: [200]\n",
+      "Get 2 largest elemements fast: [200 200]\n",
+      "Get 3 largest elemements fast: [150 200 200]\n",
+      "Get 4 largest elemements fast: [ 50 150 200 200]\n",
+      "Get 5 largest elemements fast: [ 30  50 150 200 200]\n",
+      "Get 6 largest elemements fast: [ 30  30  50 150 200 200]\n",
+      "Get 7 largest elemements fast: [ 20 150 200  50  30  30 200]\n",
+      "Get 8 largest elemements fast: [ 10 200 150 200  50  30  30  20]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy \n",
+    "\n",
+    "# Get k smallest elements fast, that will not necessarily be sorted\n",
+    "# but are guaranteed to have that \n",
+    "arr = np.array([10, 50, 200, 150, 200, 10, 30, 30, 20])\n",
+    "print(f\"\"\"\n",
+    "Original list: {arr}\n",
+    "Sorted list:   {sorted(arr)}\n",
+    "\"\"\")\n",
+    "\n",
+    "for i in range(1, len(arr)):\n",
+    "    k = i\n",
+    "    result = np.partition(arr, -k)[-k:]\n",
+    "    print(f\"Get {i} largest elemements fast: {result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Original list: [ 10  50 200 150 200  10  30  30  20]\n",
+      "Sorted list:   [10, 10, 20, 30, 30, 50, 150, 200, 200]\n",
+      "\n",
+      "Get 1 smallest elemements fast: [10]\n",
+      "Get 2 smallest elemements fast: [10 10]\n",
+      "Get 3 smallest elemements fast: [10 10 20]\n",
+      "Get 4 smallest elemements fast: [10 10 20 30]\n",
+      "Get 5 smallest elemements fast: [10 10 20 30 30]\n",
+      "Get 6 smallest elemements fast: [10 10 20 30 30 50]\n",
+      "Get 7 smallest elemements fast: [ 10  10  20  30 150  50  30]\n",
+      "Get 8 smallest elemements fast: [ 10  10  20  30 150  50  30 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy \n",
+    "\n",
+    "# Get k smallest elements fast, that will not necessarily be sorted\n",
+    "# but are guaranteed to have that \n",
+    "arr = np.array([10, 50, 200, 150, 200, 10, 30, 30, 20])\n",
+    "print(f\"\"\"\n",
+    "Original list: {arr}\n",
+    "Sorted list:   {sorted(arr)}\n",
+    "\"\"\")\n",
+    "\n",
+    "for i in range(1, len(arr)):\n",
+    "    k = i\n",
+    "    result = np.partition(arr, k)[:k]\n",
+    "    print(f\"Get {i} smallest elemements fast: {result}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### np.argpartition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like `np.partition`, but returns indices instead of rearranged data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Get 1 smallest elements fast: [10]\n",
+      "Get 2 smallest elements fast: [10 10]\n",
+      "Get 3 smallest elements fast: [10 10 20]\n",
+      "Get 4 smallest elements fast: [10 10 20 30]\n",
+      "Get 5 smallest elements fast: [10 10 20 30 30]\n",
+      "Get 6 smallest elements fast: [10 10 20 30 30 50]\n",
+      "Get 7 smallest elements fast: [ 10  10  20  30 150  50  30]\n",
+      "Get 8 smallest elements fast: [ 10  10  20  30 150  50  30 200]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "arr = np.array([10, 50, 200, 150, 200, 10, 30, 30, 20])\n",
+    "\n",
+    "for i in range(1, len(arr)):\n",
+    "    k = i\n",
+    "    result = np.argpartition(arr, k)\n",
+    "    result_smallest_k = result[:k]\n",
+    "    print(f'Get {k} smallest elements fast: {np.array(arr)[result_smallest_k]}')\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
