--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -2637,7 +2637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2650,7 +2650,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2662,7 +2662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2671,7 @@
        "'New York'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2682,7 +2682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2695,7 +2695,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2706,7 +2706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2715,7 +2715,7 @@
        "'New York'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4853,6 +4853,316 @@
     "df[df.groupby('Type')['Length'].apply( lambda x: (x == 100)|(x == 500) )]\n",
     "\n",
     "df[df.groupby('Type')['Length'].apply( lambda x: x.between(100,200) )]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### .agg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Group</th>\n",
+       "      <th>Value1</th>\n",
+       "      <th>Value2</th>\n",
+       "      <th>Value3</th>\n",
+       "      <th>customer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1</td>\n",
+       "      <td>100</td>\n",
+       "      <td>560</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>2</td>\n",
+       "      <td>110</td>\n",
+       "      <td>600</td>\n",
+       "      <td>2</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>1</td>\n",
+       "      <td>205</td>\n",
+       "      <td>750</td>\n",
+       "      <td>3</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>2</td>\n",
+       "      <td>215</td>\n",
+       "      <td>770</td>\n",
+       "      <td>4</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>1</td>\n",
+       "      <td>230</td>\n",
+       "      <td>900</td>\n",
+       "      <td>5</td>\n",
+       "      <td>a</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>2</td>\n",
+       "      <td>235</td>\n",
+       "      <td>910</td>\n",
+       "      <td>6</td>\n",
+       "      <td>b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Group  Value1  Value2  Value3 customer\n",
+       "0  2015      1     100     560       1        a\n",
+       "1  2015      2     110     600       2        b\n",
+       "2  2016      1     205     750       3        a\n",
+       "3  2016      2     215     770       4        b\n",
+       "4  2017      1     230     900       5        a\n",
+       "5  2017      2     235     910       6        b"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'Year': [2015, 2015, 2016, 2016, 2017, 2017],\n",
+    "    'Group': [1, 2, 1, 2, 1, 2],\n",
+    "    'Value1': [100, 110, 205, 215, 230, 235],\n",
+    "    'Value2': [560, 600, 750, 770, 900, 910],\n",
+    "    'Value3': [1, 2, 3, 4, 5, 6],\n",
+    "    'customer': ['a', 'b', 'a', 'b', 'a', 'b']\n",
+    "})\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Value1</th>\n",
+       "      <th>customer</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>a, b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>a, b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>232.5</td>\n",
+       "      <td>a, b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Value1 customer\n",
+       "0  2015   105.0     a, b\n",
+       "1  2016   210.0     a, b\n",
+       "2  2017   232.5     a, b"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Method 1\n",
+    "# NOTE: doesn't allow performing multiple transformations on the same column\n",
+    "\n",
+    "def join_strings(x):\n",
+    "    print(x)\n",
+    "    return ', '.join(str(x))\n",
+    "\n",
+    "(\n",
+    "    df\n",
+    "    .groupby('Year')\n",
+    "    .agg({\n",
+    "        'Value1': 'median', # mean, median, sum, \n",
+    "        # 'Value2': ['mean', 'sum'], # this is not the best as this will lead to double-level index\n",
+    "        'customer': lambda x: ', '.join(x)\n",
+    "    })\n",
+    "    .reset_index()\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Evgeni Zorin\\AppData\\Local\\Temp\\ipykernel_24512\\796049291.py:5: FutureWarning: The provided callable <function mean at 0x000002C2AA822160> is currently using SeriesGroupBy.mean. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"mean\" instead.\n",
+      "  .agg(\n",
+      "C:\\Users\\Evgeni Zorin\\AppData\\Local\\Temp\\ipykernel_24512\\796049291.py:5: FutureWarning: The provided callable <function median at 0x000002C2AA958F40> is currently using SeriesGroupBy.median. In a future version of pandas, the provided callable will be used directly. To keep current behavior pass the string \"median\" instead.\n",
+      "  .agg(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Mean</th>\n",
+       "      <th>Median</th>\n",
+       "      <th>Concat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>105.0</td>\n",
+       "      <td>a, b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>a, b</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>232.5</td>\n",
+       "      <td>232.5</td>\n",
+       "      <td>a, b</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year   Mean  Median Concat\n",
+       "0  2015  105.0   105.0   a, b\n",
+       "1  2016  210.0   210.0   a, b\n",
+       "2  2017  232.5   232.5   a, b"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Method 2 (PREFERRED)\n",
+    "(\n",
+    "    df\n",
+    "    .groupby('Year')\n",
+    "    .agg(\n",
+    "        Mean =   ('Value1', np.mean),\n",
+    "        Median = ('Value1', np.median),\n",
+    "        Concat = ('customer', lambda x: ', '.join(x))\n",
+    "    )\n",
+    "    .reset_index()\n",
+    ")"
    ]
   },
   {
