--- a/_0_Statistics.ipynb
+++ b/_0_Statistics.ipynb
@@ -3901,6 +3901,7 @@
     "Probability distributions can be:\n",
     "- **Discrete**:\n",
     "  - Probability of occurrence of each value of a discrete random variable. A discrete random variable is a random variable that has countable values.\n",
+    "  - Examples: Binomial distribution, Poisson Distribution\n",
     "  - Examples: list of non-negative integers\n",
     "  - Example - number of customer complains: <br> ![image-2.png](attachment:image-2.png)\n",
     "- **Continuous**:\n",
@@ -4137,13 +4138,14 @@
     "\n",
     "Normal distribution (or probability density function / PDF) equation:\n",
     "\n",
-    "$$ \\huge f(x) = p(x) = \\cfrac{1}{\\sigma \\sqrt{2 \\pi}} \\times e^{-\\frac{1}{2} (\\frac{x-\\mu}{\\sigma})^{2}} $$\n",
+    "$$ \n",
+    "\\huge \n",
+    "f(x) = p(x) = f(x | \\mu, \\sigma) = \\cfrac{1}{\\sigma \\sqrt{2 \\pi}} \\times e^{-\\frac{1}{2} (\\frac{x-\\mu}{\\sigma})^{2}} $$\n",
     "\n",
     ", where\n",
     "- $\\sigma$ - standard deviation\n",
-    "- \n",
     "\n",
-    "The vertical axis is not the probability but rather the likelihood for the data. To find the probability, we need to look at a given range, and then find the area under the curve for that range. \n"
+    "> Note that with this formula we get the **likelihood**, not the probability; the vertical axis is not the probability but rather the likelihood for the data. To find the probability, we need to look at a given range, and then find the area under the curve for that range (probability = area under the curve between two points). \n"
    ]
   },
   {
@@ -4638,7 +4640,9 @@
     "\n",
     "**Formula for probability of getting $x$ successes in $n$ trials** (*comes out of formula for combinations no repetitions*):\n",
     "\n",
-    "$$ P(x) = {n \\choose x} * p^{x} * q^{n-x} = \\frac{n!}{x! * (n-x)!} p^{x} q^{n-x} $$\n",
+    "$$\n",
+    "\\large\n",
+    "P(x) = p(x | n, p) = {n \\choose x} * p^{x} * q^{n-x} = \\frac{n!}{x! * (n-x)!} p^{x} q^{n-x} $$\n",
     "where:\n",
     "- $P(x)$ - probability that the success happens exactly $x$ times\n",
     "- $p$ - probability of success, \n",
@@ -5134,7 +5138,8 @@
     "\n",
     "Probability formula: \n",
     "$$\n",
-    "P(x) = \\cfrac{\\lambda^{x} e^{-\\lambda}}{x!}\n",
+    "\\large\n",
+    "P(x) = p(x | \\lambda) = \\cfrac{\\lambda^{x} e^{-\\lambda}}{x!}\n",
     "$$\n",
     "- $e = 2.71828...$\n",
     "- $\\lambda = np$: parameter that determines the value of this distribution \n",
@@ -5159,6 +5164,19 @@
     "- A problem may be binomial conceptually, but $n$ and $p$ may be unknown, and we may only know the mean ($\\lambda$)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example:\n",
+    "\n",
+    "> On average, person A can read 10 pages of a book per hour. What is the probability that in the next hour, they will read exactly 8 pages? \n",
+    "\n",
+    "$$\n",
+    "p(x | \\lambda) = \\cfrac{e^{-10} * 10^{8}}{8!} = 0.113\n",
+    "$$\n"
    ]
   },
   {
