--- a/_Pandas.ipynb
+++ b/_Pandas.ipynb
@@ -6273,10 +6273,6 @@
     "import pandas as pd\n",
     "\n",
     "# Create a sample dataframe\n",
-    "data = {\n",
-    "    'Group': ['A', 'A', 'A', 'B', 'B', 'B', 'B'],\n",
-    "    'Value': [10, 20, 15, 5, 25, 30, 12]\n",
-    "}\n",
     "df = pd.DataFrame({\n",
     "    'Group': ['A', 'A', 'A', 'B', 'B', 'B', 'B'],\n",
     "    'Value': [10, 20, 15, 5, 25, 30, 12]\n",
@@ -9938,6 +9934,104 @@
     "]\n",
     "df = pd.DataFrame(data, columns=['Category', 'Value'])\n",
     "df.assign(Value_filled=df.groupby('Category')['Value'].ffill().bfill())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>group</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>a</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>b</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>c</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>four</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>five</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  name  group\n",
+       "0   1     a      1\n",
+       "1   2     b      1\n",
+       "2   3     c      1\n",
+       "4   4  four      2\n",
+       "5   5  five      2"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'id': [1, 2, 3, 1, 4, 5],\n",
+    "    'name': ['a', 'b', 'c', 'a', 'four', 'five'],\n",
+    "    'group': [1, 1, 1, 2, 2, 2]\n",
+    "})\n",
+    "\n",
+    "(\n",
+    "    df\n",
+    "    .drop_duplicates(\n",
+    "        subset = ['id', 'name'],\n",
+    "        keep = 'first'\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -17071,7 +17165,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A0</td>\n",
+       "      <td>B0</td>\n",
+       "      <td>C0</td>\n",
+       "      <td>D0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A1</td>\n",
+       "      <td>B1</td>\n",
+       "      <td>C1</td>\n",
+       "      <td>D1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A2</td>\n",
+       "      <td>B2</td>\n",
+       "      <td>C2</td>\n",
+       "      <td>D2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A3</td>\n",
+       "      <td>B3</td>\n",
+       "      <td>C3</td>\n",
+       "      <td>D3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A4</td>\n",
+       "      <td>B4</td>\n",
+       "      <td>C4</td>\n",
+       "      <td>D4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>A5</td>\n",
+       "      <td>B5</td>\n",
+       "      <td>C5</td>\n",
+       "      <td>D5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>A6</td>\n",
+       "      <td>B6</td>\n",
+       "      <td>C6</td>\n",
+       "      <td>D6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>A7</td>\n",
+       "      <td>B7</td>\n",
+       "      <td>C7</td>\n",
+       "      <td>D7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A8</td>\n",
+       "      <td>B8</td>\n",
+       "      <td>C8</td>\n",
+       "      <td>D8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>A9</td>\n",
+       "      <td>B9</td>\n",
+       "      <td>C9</td>\n",
+       "      <td>D9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>A10</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>C10</td>\n",
+       "      <td>D10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>A11</td>\n",
+       "      <td>B11</td>\n",
+       "      <td>C11</td>\n",
+       "      <td>D11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      A    B    C    D\n",
+       "0    A0   B0   C0   D0\n",
+       "1    A1   B1   C1   D1\n",
+       "2    A2   B2   C2   D2\n",
+       "3    A3   B3   C3   D3\n",
+       "4    A4   B4   C4   D4\n",
+       "5    A5   B5   C5   D5\n",
+       "6    A6   B6   C6   D6\n",
+       "7    A7   B7   C7   D7\n",
+       "8    A8   B8   C8   D8\n",
+       "9    A9   B9   C9   D9\n",
+       "10  A10  B10  C10  D10\n",
+       "11  A11  B11  C11  D11"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "###################################################################################################################################\n",
+    "#####   Concatenate dataframes   ##################################################################################################\n",
+    "###################################################################################################################################\n",
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"A\": [\"A0\", \"A1\", \"A2\", \"A3\"],\n",
+    "        \"B\": [\"B0\", \"B1\", \"B2\", \"B3\"],\n",
+    "        \"C\": [\"C0\", \"C1\", \"C2\", \"C3\"],\n",
+    "        \"D\": [\"D0\", \"D1\", \"D2\", \"D3\"],\n",
+    "    },\n",
+    "    index=[0, 1, 2, 3],\n",
+    ")\n",
+    "\n",
+    "df2 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"A\": [\"A4\", \"A5\", \"A6\", \"A7\"],\n",
+    "        \"C\": [\"C4\", \"C5\", \"C6\", \"C7\"],\n",
+    "        \"B\": [\"B4\", \"B5\", \"B6\", \"B7\"],\n",
+    "        \"D\": [\"D4\", \"D5\", \"D6\", \"D7\"],\n",
+    "    },\n",
+    "    index=[4, 5, 6, 7],\n",
+    ")\n",
+    "\n",
+    "df3 = pd.DataFrame(\n",
+    "    {\n",
+    "        \"A\": [\"A8\", \"A9\", \"A10\", \"A11\"],\n",
+    "        \"C\": [\"C8\", \"C9\", \"C10\", \"C11\"],\n",
+    "        \"B\": [\"B8\", \"B9\", \"B10\", \"B11\"],\n",
+    "        \"D\": [\"D8\", \"D9\", \"D10\", \"D11\"],\n",
+    "    },\n",
+    "    index=[4, 5, 6, 7],\n",
+    ")\n",
+    "\n",
+    "# Concatenate several dataframes into a new one\n",
+    "df_comb = pd.concat(\n",
+    "    [df1, df2, df3], \n",
+    "    ignore_index=True # Clear the existing index and reset it in the result\n",
+    ")\n",
+    "df_comb\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -17174,47 +17454,15 @@
        "7  A7  B7  C7  D7"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "###################################################################################################################################\n",
-    "#####   Concatenate dataframes   ##################################################################################################\n",
-    "###################################################################################################################################\n",
-    "import pandas as pd\n",
-    "\n",
-    "df1 = pd.DataFrame(\n",
-    "    {\n",
-    "        \"A\": [\"A0\", \"A1\", \"A2\", \"A3\"],\n",
-    "        \"B\": [\"B0\", \"B1\", \"B2\", \"B3\"],\n",
-    "        \"C\": [\"C0\", \"C1\", \"C2\", \"C3\"],\n",
-    "        \"D\": [\"D0\", \"D1\", \"D2\", \"D3\"],\n",
-    "    },\n",
-    "    index=[0, 1, 2, 3],\n",
-    ")\n",
-    "\n",
-    "df2 = pd.DataFrame(\n",
-    "    {\n",
-    "        \"A\": [\"A4\", \"A5\", \"A6\", \"A7\"],\n",
-    "        \"C\": [\"C4\", \"C5\", \"C6\", \"C7\"],\n",
-    "        \"B\": [\"B4\", \"B5\", \"B6\", \"B7\"],\n",
-    "        \"D\": [\"D4\", \"D5\", \"D6\", \"D7\"],\n",
-    "    },\n",
-    "    index=[4, 5, 6, 7],\n",
-    ")\n",
-    "\n",
-    "# Concatenate several dataframes into a new one\n",
-    "df3 = pd.concat(\n",
-    "    [df1, df2], \n",
-    "    ignore_index=True # Clear the existing index and reset it in the result\n",
-    ")\n",
-    "df3\n",
-    "\n",
     "# Update the existing dataframe\n",
     "df1 = pd.concat( [df1, df2], ignore_index=True )\n",
-    "df1\n"
+    "df1"
    ]
   },
   {
